grammar.js
    source_file: $ =>
      seq(
        optional(choice($._bom, $.shebang)),
        choice($.module_definition, repeat($._declaration)),
        optional(seq($.end_file, $._after_eof)),
      ),

    _bom: _$ => token.immediate("\uFEFF"), // kind of like a special form of whitespace
    end_file: (_) => token(seq(prec(100, choice(/\x1a/, /__EOF__/)))),

    identifier: _$ => /[_\p{XID_Start}][\p{XID_Continue}]*/,
    _type_identifier: $ => alias($.identifier, $.type_identifier),
    module_fqn: $ => seq($.identifier, repeat(seq('.', $.identifier))),

    // Import Declarations
    // Note that 'static import' is not provided for here, because it is
    // ambiguous with the attribute_specifiers. Technically we probably
    // prefer the static to be more tightly bound to the import, but for
    // syntax tree analysis it probably does not matter much.
    import_declaration: $ =>
      seq(repeat($._attribute), 'import', $._import_list, ';'),

    _import_list: $ =>
      choice(
        seq($.imported, optional(seq(',', $._import_list))),
        seq($.imported, ':', commaSep1($.import_bind)),
      ),

    // libdparse calls this single_import
    imported: $ =>
      choice(
        $.module_fqn,
        seq(field('alias', $.identifier), '=', $.module_fqn),
      ),

    import_bind: $ => seq($.identifier, optional(seq('=', $.identifier))),

    _declaration: $ =>
      choice(
        seq($._declaration2),
        // seq(repeat1($._attribute), $._declaration2),
        seq(repeat1($._attribute), '{', repeat($._declaration), '}'),
      ),

    storage_class: $ =>
      choice(
        $.linkage_attribute,
        $.align_attribute,
        $.at_attribute,
        $.type_qualifier,
        'deprecated',
        'static',
        'extern',
        'abstract',
        'final',
        'override',
        'synchronized',
        'auto',
        'scope',
        '__gshared',
        'ref',
        $._function_attribute_kwd,
      ),

    auto_declaration: $ => prec.right(seq(repeat($._attribute), repeat1($.storage_class), commaSep1($._auto_assignment), ';')),

    _auto_assignment: $ => seq(field('variable', $.identifier), optional($.template_parameters), '=', field('value', $._initializer)),

    type: $ => prec.right(seq(repeat($.type_qualifier), $._type2, repeat($._type_suffix))),

    _type2: $ =>
      prec.right(
        choice(
          'void',
          $.primitive_type,
          $._qualified_id,
          seq('.', $._qualified_id),
          $.typeof_expression,
          seq($.typeof_expression, '.', $._qualified_id),
          seq($.type_qualifier, '(', $.type, ')'),
          $.vector_type,
          $.traits_expression,
          $.mixin_expression,
        ),
      ),

    // dparse says the type is optional, but that seems nonsensical.
    primitive_type: $ => token(choice(
        'bool',
        'byte',
        'ubyte',
        'char',
        'short',
        'ushort',
        'int',
        'uint',
        'long',
        'ulong',
        'cent', // deprecated
        'ucent', // deprecated
        'wchar',
        'dchar',
        'float',
        'double',
        'real',
        'ifloat', // deprecated
        'idouble', // deprecated
        'ireal', // deprecated
        'cfloat', // deprecated
        'cdouble', // deprecated
        'creal', // deprecated
        'size_t',
        'ptrdiff_t',
        'string',
        'cstring',
        'dstring',
        'wstring',
        'noreturn',
      )),

    // we call out void specially because it is not always a basic type
    _type_suffix: $ =>
      prec.right(
        choice(
          '*',
          seq('[', ']'),
          seq('[', $._expression, ']'),
          seq('[', $._expression, '..', $._expression, ']'),
          seq('[', $.type, ']'),
          seq('delegate', $.parameters, repeat($.member_function_attribute)),
          seq('function', $.parameters, repeat($._function_attribute)),
        ),
      ),

    _attribute: $ =>
      prec.right(
        choice(
          $.linkage_attribute,
          $.align_attribute,
          $.deprecated_attribute,
          $.pragma_expression,
          $.type_qualifier,
          'private',
          'package',
          seq('package', '(', $.module_fqn, ')'),
          'protected',
          'public',
          'export',
          'static',
          'extern',
          'abstract',
          'final',
          'override',
          'synchronized',
          'auto',
          'scope',
          '__gshared',
          $.at_attribute,
          $._function_attribute_kwd,
          'ref',
          'return',
        ),
      ),

    at_attribute: $ =>
      prec.right(
        choice(
          seq('@', $.identifier),
          seq('@', $.identifier, $.arguments),
          seq('@', $.template_instance),
          seq('@', $.template_instance, $.arguments),
          seq('@', '(', $._argument_list, ')'),
        ),
      ),

    _function_attribute_kwd: $ => choice('nothrow', 'pure'),

    linkage_attribute: $ =>
      prec.right(
        seq(
          'extern',
          '(',
          choice(
            'C',
            'D',
            'Windows',
            'System',
            seq('Objective', '-', 'C'),
            seq('C', '++'),
            // this tecnically permits assignment operations, which is wrong, but simpler
            seq(
              'C',
              '++',
              ',',
              optional(alias($._argument_list, $.namespace_list)),
            ),
            seq('C', '++', ',', 'class'),
            seq('C', '++', ',', 'struct'),
          ),
          ')',
        ),
      ),

    _argument_list: $ => prec.right(commaSep1Comma($._expression)),

    named_argument: $ =>
      choice($._expression, seq($.identifier, ':', $._expression)),

    _named_argument_list: $ => prec.right(commaSep1Comma($.named_argument)),

    named_arguments: $ => seq('(', optional($._named_argument_list), ')'),

    // 3.6 PRAGMAS

    expression_list: $ => prec.right(commaSep1($._expr)),

    // formally this is AssignExpression, but we use a different
    // structure.  This is just a single _expression term, and
    // cannot be used in a comma _expression. Expression is
    // used where comma separated expressions are valid.
    //
    // The formal D grammar permits _expression lists in many places,
    // but then the compiler rejects almost any attempt to use them.
    // We are electing to reject these in the syntax, rather than
    // in the semantic.  This makes our grammar simpler, and has
    // zero effect on any actual legal code.
    _expression: $ => $._expr,
    _expr: $ =>
      prec.left(
        choice(
          $.assignment_expression,
          $.ternary_expression,
          $._binary_expression,
          $._unary_expr,
        ),
      ),

    call_expression: $ =>
      prec.left(
        choice(
          seq($._unary_expr, $.named_arguments),
          prec(2, seq($.primitive_type, $.named_arguments)),
          prec(1, seq($.identifier, $.named_arguments)),
          seq($.type, $.named_arguments),
        ),
      ),

    primary_expression: $ =>
      choice(
        seq('(', $.type, ')', '.', $.identifier),
        seq('(', $.type, ')', '.', $.template_instance),
        seq($.primitive_type, '.', $.identifier),
        seq('void', '.', $.identifier),
        seq('(', $.expression_list, ')'),
        seq($.type_qualifier, '(', $.type, ')', '.', $.identifier),
        seq($.vector_type, '.', $.identifier),
      ),

    equal_binary_expression: $ =>
      prec.left('compare', binaryOp($._expr, choice('==', '!='), $._expr)),

    add_binary_expression: $ =>
      prec.left('add', binaryOp($._expr, choice('+', '-', '~'), $._expr)),

    mul_binary_expression: $ =>
      prec.left('multiply', binaryOp($._expr, choice('*', '/', '%'), $._expr)),

    _unary_expr: $ =>
      choice(
        $._primary_expr,
        $.unary_expression,
        $.new_expression,
        $.delete_expression,
        $.assert_expression,
        $.cast_expression,
        $.throw_expression,
        $.call_expression,
        $.slice_expression,
        $.postfix_expression,
        $.property_expression,
      ),

    assert_arguments: $ =>
      seq(
        $._expression,
        optional(seq(',', commaSep1($._expression))),
        optional(','),
      ),

    import_expression: $ => seq('import', '(', $._expression, ')'),

    hex_string_literal: $ =>
      seq(
        'x"',
        token.immediate(prec(1, /[0-9A-Fa-f\s]*/)),
        token.immediate(/"[cdw]?/),
      ),

    // TODO: _unescaped_string_content: (_) => token.immediate(/[^"\\]+/),

    quoted_string_literal: $ =>
      seq(
        '"',
        repeat(
          choice(
            token.immediate(prec(1, /[^"\\]+/)),
            $.escape_sequence,
            $.htmlentity,
          ),
        ),
        token.immediate(/"[cdw]?/),
      ),

    interpolation_expression: $ => seq('$(', $._expression, ')'),

    interpolated_raw_string_literal: $ =>
      seq(
        'i`',
        repeat(choice(/[^`$]+/, /\$[^(`]/, $.interpolation_expression)),
        choice('`', '$`'), // tailing "$" special
      ),

    interpolated_escape: $ => '\\$',

    interpolated_quoted_string_literal: $ =>
      seq(
        'i"',
        repeat(
          choice(
            /[^"$\\]+/,
            /\$[^(]/,
            $.escape_sequence,
            $.htmlentity,
            $.interpolated_escape,
            $.interpolation_expression,
          ),
        ),
        choice('"', '$"'), // tailing "$" special
      ),

    interpolated_token_string_literal: $ =>
      seq("iq{", optional($._interpolated_token_string_tokens), "}"),

    // we aren't tokenizing this yet
    _interpolated_token_string_tokens: $ =>
      repeat1(choice($._token_string_token, $.interpolation_expression)),

    _string_literal: $ =>
      choice(
        $.regular_string_literal,
        $.raw_string_literal,
        $.hex_string_literal,
        $.quoted_string_literal,
        $.token_string_literal,
        $.interpolated_raw_string_literal,
        $.interpolated_quoted_string_literal,
        $.interpolated_token_string_literal,
      ),

    character_literal: $ =>
      choice(
        /'[^\\']'/,
        seq("'", choice($.escape_sequence, $.htmlentity), "'"),
      ),

    // NB: array_literals are a super set of associative array literals,
    // and grammatically the two are not distinguishable.
    function_literal: $ =>
      prec.right(
        choice(
          seq(
            'function',
            optional(seq(optional('auto'), 'ref')),
            optional($.type),
            optional($._parameter_with_attributes),
            $._specified_function_body,
          ),
          seq(
            'function',
            optional(seq(optional('auto'), 'ref')),
            optional($.type),
            $._parameter_with_attributes,
            '=>',
            $._expr,
          ),
          seq(
            'delegate',
            optional(seq(optional('auto'), 'ref')),
            optional($.type),
            optional($._parameter_with_member_attributes),
            $._specified_function_body,
          ),
          seq(
            'delegate',
            optional(seq(optional('auto'), 'ref')),
            optional($.type),
            $._parameter_with_member_attributes,
            '=>',
            $._expr,
          ),
          seq(
            optional(seq(optional('auto'), 'ref')),
            $._parameter_with_member_attributes,
            $._specified_function_body,
          ),
          seq(
            optional(seq(optional('auto'), 'ref')),
            $._parameter_with_member_attributes,
            '=>',
            $._expr,
          ),
          $._specified_function_body,
          seq($.identifier, '=>', $._expr),
        ),
      ),

    _parameter_with_attributes: $ =>
      seq($.parameters, repeat($._function_attribute)),

    _parameter_with_member_attributes: $ =>
      seq($._parameters, repeat($.member_function_attribute)),

    _declarations_and_statements: $ => repeat1($._declaration_or_statement),

    _declaration_or_statement: $ => choice($._declaration, $._statement),

    scope_statement: $ => $._declaration_or_statement,
    compound_statement: $ =>
      seq(
        '{',
        optional($._declarations_and_statements),
        optional($.label),
        '}',
      ),

    expression_statement: $ => seq($.expression_list, ';'),

    if_statement: $ => prec.right(seq(
      'if',
      field('condition', $.if_condition),
      field('consequence', $.scope_statement),
      optional(seq(
        'else',
        field('alternative', $.scope_statement)
      ))
    )),

    if_condition: $ =>
      seq(
        '(',
        choice(
          $._expr,
          seq('auto', $.identifier, '=', $._expression),
          seq('scope', $.identifier, '=', $._expression),
          seq(repeat1($.type_qualifier), $.identifier, '=', $._expression),
          seq($.type, $.identifier, '=', $._expression), // type constructors already bound to type
        ),
        ')',
      ),

    return_statement: $ => seq('return', optional($._expression), ';'),

    aggregate_body: $ => seq('{', repeat($._declaration), '}'),

    //
    // Struct Initializer
    //
    // renamed to aggregate initializer, as this is used for
    // all aggregate types (classes, enums, interfaces, structs)
    // also struct_member_initializers is inlined here
    class_declaration: $ =>
      seq(
        repeat($._attribute),
        'class',
        field('name', $._type_identifier),
        choice(
          ';',
          seq(optional(seq(':', $._base_class_list)), $.aggregate_body),
          seq(
            $.template_parameters,
            choice(
              ';',
              seq(optional(seq(':', $._base_class_list)), $.aggregate_body),
              seq($.template_constraint, optional(seq(':', $._base_class_list)), $.aggregate_body),
              seq(':', $._base_class_list, $.template_constraint, $.aggregate_body),
            ),
          ),
        ),
      ),

    _base_class_list: $ => commaSep1($.base_class),
    interface_declaration: $ =>
      seq(
        repeat($._attribute),
        choice(
          seq('interface', $._type_identifier, ';'),
          seq('interface', $._type_identifier, $.aggregate_body),
          seq(
            'interface',
            $._type_identifier,
            ':',
            $._base_class_list,
            $.aggregate_body,
          ),
          seq(
            'interface',
            $._type_identifier,
            $.template_parameters,
            $.aggregate_body,
          ),
          seq(
            'interface',
            $._type_identifier,
            $.template_parameters,
            ':',
            $._base_class_list,
            $.aggregate_body,
          ),
          seq(
            'interface',
            $._type_identifier,
            $.template_parameters,
            ':',
            $._base_class_list,
            $.template_constraint,
            $.aggregate_body,
          ),
          seq(
            'interface',
            $._type_identifier,
            $.template_parameters,
            $.template_constraint,
            $.aggregate_body,
          ),
          seq(
            'interface',
            $._type_identifier,
            $.template_parameters,
            $.template_constraint,
            ':',
            $._base_class_list,
            $.aggregate_body,
          ),
        ),
      ),

    parameter: $ => prec.right($._parameter),

    ellipses: _$ => '...',

    _variadic_arguments_attributes: $ =>
      repeat1($.variadic_arguments_attribute),

    _function_attribute: $ =>
      choice($._function_attribute_kwd, $.at_attribute),

    _specified_function_body: $ =>
      seq(repeat($._function_contract), optional('do'), $.compound_statement),
