test/corpus/hexstring.scm
================================================================================
Hex String
================================================================================
auto hex = x"001234 abcdef";
--------------------------------------------------------------------------------

(source_file
  (auto_declaration
    (storage_class
      (auto))
    (identifier)
    (hex_string_literal)))

================================================================================
Hex String No Whitespace
================================================================================
auto hex = x"001234abcdef";
--------------------------------------------------------------------------------

(source_file
  (auto_declaration
    (storage_class
      (auto))
    (identifier)
    (hex_string_literal)))

================================================================================
MultiLine Hex String
================================================================================
auto hex = x"001234
             abcdef";
--------------------------------------------------------------------------------

(source_file
  (auto_declaration
    (storage_class
      (auto))
    (identifier)
    (hex_string_literal)))

================================================================================
MultiLine Hex String with Suffix (D2.108)
================================================================================
auto hex = x"001234
             abcdef"w;
--------------------------------------------------------------------------------

(source_file
  (auto_declaration
    (storage_class
      (auto))
    (identifier)
    (hex_string_literal)))
